# TanWords

./: .gitignore  README.md  README.zh-CN.md
admin/: .gitignore  README.md  generate.config.example.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin/server/: db.ts  generate-cli.mjs  generate.ts  index.ts
admin/server/routes/: tables.ts
admin/src/: BatchGenerate.tsx
admin/web/src/: App.tsx  TableBrowser.tsx  api.ts
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
app/scripts/: build-windows.ps1  verify-release-data.sh
app/src/: App.tsx  index.css
app/src-tauri/: .rust-analyzer.json  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/sql/: schema.sql
app/src-tauri/src/: appconfig.rs  hn.rs  lib.rs  localdocs.rs  main.rs  mcp.rs  music.rs  native_audio.rs  reader.rs  rss.rs  secrets.rs
app/src-tauri/src/db/: articles.rs  chat.rs  dashboard.rs  documents.rs  knowledge_map.rs  migrations.rs  mod.rs  patterns.rs  practice.rs  quiz.rs  scene_lab.rs  search_history.rs  settings.rs  srs.rs  translations.rs  words_query.rs  words_types.rs  words_write.rs  writing.rs
app/src-tauri/src/db/migrations/: mod.rs  v001_005.rs  v006_010.rs  v011_015.rs  v016_021.rs
app/src-tauri/src/mcp/: config.rs  controller.rs  mod.rs  tests.rs  tools.rs  types.rs
app/src-tauri/src/native_audio/: coreaudio.rs  decoder.rs  gstreamer.rs  mod.rs  playback.rs  pulse.rs  tests.rs
app/src-tauri/src/rss/: commands.rs  mod.rs  parse.rs  types.rs
app/src-tauri/src/tts/: download.rs  engine.rs  mod.rs  models.rs
app/src-tauri/tests/: db_switch_smoke.rs  patterns_smoke.rs  scene_lab_migration_smoke.rs  srs_smoke.rs  tts_delete_smoke.rs  tts_download_smoke.rs  tts_real_model.rs  writing_studio_smoke.rs
app/src/components/: EnrichmentText.tsx  LazyWordNotesEditor.tsx  WordChatPanel.tsx  WordDetailContent.tsx  WordDetailModal.tsx  WordNotesEditor.tsx
app/src/data/: seedWords.ts
app/src/hooks/: useAnalyzeArticle.ts  useArticlePlayer.ts  useDB.core.ts  useDB.errors.ts  useDB.extra.ts  useDB.knowledgeMap.ts  useDB.patterns.ts  useDB.sceneLab.ts  useDB.ts  useDB.types.ts  useDiscover.ts  useHackerNews.ts  useIsDark.ts  useLearnArticle.ts  useRssFeed.ts  useSRS.ts  useT.ts  useTTS.ts
app/src/i18n/: translations.ts  types.ts
app/src/lib/: audioChannel.ts  docFormat.ts  documentWorkerClient.ts  enrichMeta.ts  hnComments.ts  initProviders.ts  learnHelper.ts  (+10 more)
scripts/: release.sh
(+282 files in other folders)
