[package]
name = "tanwords"
version = "0.1.0"
description = "TanWords - AI-powered English learning assistant"
authors = ["Tanner"]
edition = "2021"

[lib]
name = "tanwords_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["gzip", "brotli", "stream"] }
dom_smoothie = "0.18"
ammonia = "4"
rs-fsrs = "1"
chrono = "0.4"
sherpa-rs = "0.6"
tar = "0.4"
bzip2 = "0.4"
futures-util = "0.3"
keyring = "3"
feed-rs = "2"
url = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
